routes/lambda-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: lambda-example-com-route
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "lambda.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          # type: Exact
          value: /
      # filters:
      # - type: URLRewrite
      #   urlRewrite:
      #     path:
      #       type: ReplacePrefixMatch
      #       replacePrefixMatch: /
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: gateway.solo.io
      #       kind: RouteOption
      #       name: api-cors
      backendRefs:
      # Delegate to another HTTPRoute
      - name: my-aws-lambda-upstream
        namespace: gloo-system
        group: gloo.solo.io
        kind: Upstream
        filters:
        - type: ExtensionRef
          extensionRef:
            group: "gloo.solo.io"
            kind: Parameter
            # name: QuarkusLambdaDdoyle
            # name: quarkus-lambda-429-test-QuarkusLambdaTest-Jf88L9aFqkAS
            # name: quarkus-lambda-app-QuarkusLambdaRestDdoyle-NTZDoZz6RBrS
            name: echo
