routes/portal-frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-frontend
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: ingress-gw
  hostnames:
    - devportal.example.com
  rules:
    # - backendRefs:
    #     - name: gateway-portal-web-server
    #       namespace: gloo-system
    #       port: 8080
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: gateway.solo.io
      #       kind: RouteOption
      #       name: portal-auth
    - matches:
      - path:
          value: /
      # filters:
      #   - type: ExtensionRef
      #     extensionRef:
      #       group: gateway.solo.io
      #       kind: RouteOption
      #       name: portal
      backendRefs:
        - name: portal-frontend
          namespace: gloo-system
          port: 4000
